# rich

./: Cargo.toml  README.md  design.md  rustfmt.toml
crates/rich/: Cargo.toml  README.md
crates/rich/src/: lib.rs
crates/rich/src/ecosystem/: mod.rs  serde_json1.rs
crates/rich_derive/: Cargo.toml
crates/rich_derive/src/: dummy.rs  lib.rs  meta_type.rs
crates/rich_derive/src/internals/: ast.rs  attr.rs  context.rs  mod.rs
crates/rich_derive_impl/: Cargo.toml  README.md
crates/rich_derive_impl/src/: dummy.rs  lib.rs  meta_type.rs  rich_deserialize.rs
crates/rich_derive_impl/src/internals/: ast.rs  attr.rs  mod.rs  symbol.rs
crates/rich_serde/: Cargo.toml
crates/rich_serde/src/: lib.rs
crates/rich_serde/src/ecosystem/: mod.rs  serde_json1.rs
crates/rich_serde_derive/: Cargo.toml
crates/rich_serde_derive/src/: lib.rs
crates/serde_rich/: Cargo.toml
crates/serde_rich/src/: lib.rs
crates/styp/: Cargo.toml  README.md
crates/styp/src/: lib.rs
