[workspace]
resolver = "3"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/demurgos/rich"
license = "MIT"

[workspace.dependencies]
proc-macro2 = { version = "1.0.94", default-features = false }
quote = { version = "1.0.40", default-features = false }
rich = { path = "./crates/rich" }
rich_derive = { path = "./crates/rich_derive" }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
syn = { version = "2.0.100", default-features = false }
