[package]
name = "rich_derive"
version = "0.1.0"
edition = "2024"
description = "Implementation #[derive(MetaType)]"
license = "MIT"
repository = "https://github.com/demurgos/rich"
rust-version = "1.85.0"

[features]
default = []

[lib]
name = "rich_derive"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
rich = { path = "../rich" }
