[package]
name = "rich_derive_impl"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Share implementation code for `rich_derive` and `rich_serde_derive`"
rust-version = "1.85.0"

[features]
default = []
rich_deserialize_in_place = []

[dependencies]
drop_bomb = {workspace = true}
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
