[package]
name = "rich_serde"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
rich = { workspace = true }
serde_json1 = { package = "serde_json", version = "1.0.140", optional = true }

[dev-dependencies]
rich = { workspace = true, features = ["serde_json1"] }
rich_derive = { workspace = true }
rich_serde = { path = ".", features = ["serde_json1"] }

[features]
default = []
serde_json1 = ["dep:serde_json1"]
