[package]
name = "rich_serde"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Support for rich deserialization, including metadata"

[dependencies]
serde = { workspace = true, features = ["derive"] }
rich = { workspace = true }
serde_json1 = { package = "serde_json", version = "1.0.140", optional = true }

[dev-dependencies]
rich = { workspace = true, features = ["serde_json1"] }
rich_derive = { workspace = true }
rich_serde = { path = ".", features = ["serde_json1"] }

[features]
default = []
serde_json1 = ["dep:serde_json1"]
