[package]
name = "rich_serde_derive"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "generic framework to attach metadata to Rust values"
rust-version = "1.85.0"

[features]
default = []

[lib]
name = "rich_derive"
proc-macro = true

[dependencies]
rich_derive_impl = { workspace = true }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
